# equipment-tracker

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.bat  coding_standard.md  docker-compose.yml
apps/: CMakeLists.txt
apps/tracker/: CMakeLists.txt  main.cpp
cmake/: equipment_tracker-config.cmake.in
include/: NMEAParser.h
include/equipment_tracker/: data_storage.h  equipment.h  equipment_tracker_service.h  gps_tracker.h  network_manager.h  position.h
include/equipment_tracker/utils/: constants.h  time_utils.h  types.h
src/: bad_forklift_control.cpp  bad_naming_examples.cpp  data_storage.cpp  equipment.cpp  equipment_tracker_service.cpp  gps_tracker.cpp  network_manager.cpp  performance_issues.cpp  position.cpp  vulnerable_code.cpp
src/utils/: time_utils.cpp
tests/: CMakeLists.txt
tests/apps/tracker/: main_test.cpp
tests/include/: NMEAParser_test.h
tests/include/equipment_tracker/: data_storage_test.h  equipment_test.h  equipment_tracker_service_test.h  gps_tracker_test.h
tests/include/equipment_tracker/utils/: constants_test.h  types_test.h
tests/src/: data_storage_test.cpp  equipment_test.cpp  equipment_tracker_service_test.cpp  gps_tracker_test.cpp  network_manager_test.cpp  position_test.cpp
tests/src/utils/: time_utils_test.cpp
